New PageCache histogram for tracking the highest leverage frame reject reasons. https://bugs.webkit.org/show_bug.cgi?id=81358

Reviewed by Adam Barth.

The current chromium FrameClientImpl always denies page cache; but
that's easily fixable.  This histogram tracks which rejection
causes occur alone with that cause.  I'm particularly interested
in knowing how many more pages would work in the page cache if we
could get plugins in.

* history/PageCache.cpp:
(WebCore::logCanCachePageDecision):


Canonical link: https://commits.webkit.org/98913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111391 268f45cc-cd09-0410-ab3c-d52691b4dbfc